<resources>
    <string name="app_name">StoryApp</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="title_signup_page">Daftar</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Login dulu</string>
    <string name="title_login_page">Mari berbagi cerita Error mu</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="story">story</string>
    <string name="timeout">Timeout</string>
    <string name="camera">Camera</string>
    <string name="Gallery">Gallery</string>
    <string name="description">description</string>
    <string name="kirim">kirim</string>
    <string name="gambar_kosong">gambar kosong</string>
    <string name="cerita">silahkan isi cerita anda</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">Maps</string>
</resources>